# SimpleRSSClient

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindAsio.cmake  FindRapidXML.cmake
include/: Data.hpp  Frame.hpp  List.hpp  Net.hpp  View.hpp  XMLDoc.hpp
src/: CMakeLists.txt  main.cpp
